--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "gatsby-source-filesystem": "^2.0.4",
     "gatsby-transformer-sharp": "^2.1.4",
     "prop-types": "^15.6.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
     "react-helmet": "^6.0.0",
     "styled-components": "^4.0.2"
   },
